--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
 	<modules>
 		<module>twitter-to-kafka-service</module>
         <module>app-config-data</module>
-    </modules>
+		<module>kafka</module>
+	</modules>
 	<properties>
 		<java.version>17</java.version>
 		<spring-boot.version>3.0.6</spring-boot.version>
@@ -69,7 +70,4 @@
 
 		<pluginManagement></pluginManagement>
 	</build>
-
-
-
 </project>
