--- a/kafka/kafka-model/pom.xml
+++ b/kafka/kafka-model/pom.xml
@@ -7,9 +7,43 @@
         <groupId>io.microservices.pro</groupId>
         <artifactId>kafka</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+        </dependency>
+    </dependencies>
     <artifactId>kafka-model</artifactId>
+
+
+  <build>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.avro</groupId>
+              <artifactId>avro-maven-plugin</artifactId>
+              <version>${avro.version}</version>
+              <configuration>
+                  <stringType>String</stringType>
+              </configuration>
+              <executions>
+                  <execution>
+                      <phase>generate-sources</phase>
+                      <goals>
+                          <goal>schema</goal>
+                      </goals>
+                      <configuration>
+                          <sourceDirectory>${project.basedir}/src/main/resources/avro/</sourceDirectory>
+                          <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+                      </configuration>
+                  </execution>
+              </executions>
+          </plugin>
+
+      </plugins>
+  </build>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
