--- a/app-config-data/pom.xml
+++ b/app-config-data/pom.xml
@@ -23,16 +23,24 @@
             <scope>test</scope>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.twitter4j</groupId>-->
-<!--            <artifactId>twitter4j-stream</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-stream</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+<!--            <version>${spring-boot-maven-plugin.version}</version>-->
+        </dependency>
+
+
     </dependencies>
 
     <properties>
