--- a/kafka/kafka-model/pom.xml
+++ b/kafka/kafka-model/pom.xml
@@ -11,13 +11,47 @@
     </parent>
 
     <dependencies>
+
+        <dependency>
+            <groupId>io.microservices.pro</groupId>
+            <artifactId>app-config-data</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
+            <dependency>
+                <groupId>io.microservices.pro</groupId>
+                <artifactId>app-config-data</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-webflux</artifactId>
+            </dependency>
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
         </dependency>
-    </dependencies>
-    <artifactId>kafka-model</artifactId>
+        </dependencies>
 
+    <artifactId>kafka-model</artifactId>
 
   <build>
       <plugins>
@@ -40,6 +74,12 @@
                       </configuration>
                   </execution>
               </executions>
+          </plugin>
+
+          <plugin>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-maven-plugin</artifactId>
+              <version>${spring-boot.version}</version>
           </plugin>
 
       </plugins>
