--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<module>twitter-to-kafka-service</module>
         <module>app-config-data</module>
 		<module>kafka</module>
+		<module>common-config</module>
 	</modules>
 	<properties>
 		<java.version>17</java.version>
@@ -25,6 +26,13 @@
 		<lombok.version>1.18.26</lombok.version>
 		<twitter-stream.version>4.0.7</twitter-stream.version>
 		<avro.version>1.10.0</avro.version>
+		<spring-kafka.version>2.6.2</spring-kafka.version>
+		<spring-retry.version>2.0.1</spring-retry.version>
+		<spring-boot-starter-aop.version>3.0.6</spring-boot-starter-aop.version>
+		<kafka-avro-serializer.version>5.5.1</kafka-avro-serializer.version>
+		<kafka-model.version>0.0.1-SNAPSHOT</kafka-model.version>
+		<project.version>0.0.1-SNAPSHOT</project.version>
+		<spring-boot-maven-plugin.version>3.0.6</spring-boot-maven-plugin.version>
 	</properties>
 
 
@@ -43,6 +51,23 @@
 				<scope>test</scope>
 			</dependency>
 
+			<dependency>
+				<groupId>org.springframework.kafka</groupId>
+				<artifactId>spring-kafka</artifactId>
+				<version>${spring-kafka.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.retry</groupId>
+				<artifactId>spring-retry</artifactId>
+				<version>${spring-retry.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-aop</artifactId>
+				<version>${spring-boot-starter-aop.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.twitter4j</groupId>
@@ -56,6 +81,45 @@
 				<version>${avro.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-webflux</artifactId>
+				<version>${spring-boot.version}</version>
+			</dependency>
+
+<!--			<dependency>-->
+<!--				<groupId>io.microservices.pro</groupId>-->
+<!--				<artifactId>kafka-model</artifactId>-->
+<!--			</dependency>-->
+
+			<dependency>
+				<groupId>io.microservices.pro</groupId>
+				<artifactId>common-config</artifactId>
+			</dependency>
+
+			<dependency>
+				<groupId>io.microservices.pro</groupId>
+				<artifactId>kafka-model</artifactId>
+				<version>${kafka-model.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.microservices.pro</groupId>
+				<artifactId>kafka-admin</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.microservices.pro</groupId>
+				<artifactId>kafka-producer</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+<!--			<dependency>-->
+<!--				<groupId>io.microservices.pro</groupId>-->
+<!--				<artifactId>kafka-producer</artifactId>-->
+<!--				<version>${project.version}</version>-->
+<!--			</dependency>-->
 
 			<dependency>
 				<groupId>org.projectlombok</groupId>
@@ -63,8 +127,46 @@
 				<version>${lombok.version}</version>
 				<scope>provided</scope>
 			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring-boot-maven-plugin.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.confluent</groupId>
+				<artifactId>kafka-avro-serializer</artifactId>
+				<version>${kafka-avro-serializer.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-log4j12</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>io.swagger</groupId>
+						<artifactId>swagger-annotations</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>io.swagger</groupId>
+						<artifactId>swagger-core</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
+
+	<repositories>
+		<repository>
+			<id>confluent</id>
+			<url>https://packages.confluent.io/maven/</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
@@ -75,6 +177,5 @@
 			</plugin>
 		</plugins>
 
-<!--		<pluginManagement></pluginManagement>-->
 	</build>
 </project>
